<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.c242pS371.nutrigoal.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_plan_diet"
        android:name="com.c242pS371.nutrigoal.ui.plan_diet.PlanDietFragment"
        android:label="fragment_plan_diet"
        tools:layout="@layout/fragment_plan_diet" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.c242pS371.nutrigoal.ui.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.c242pS371.nutrigoal.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>