<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plan_diet.AddFoodRecommendationActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/iv_back_from_profile_desc"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_back" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
                android:layout_marginTop="10dp"
                android:text="@string/add_food_recommendation_title"
                app:layout_constraintEnd_toEndOf="@id/line"
                app:layout_constraintStart_toStartOf="@id/line"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/add_food_recommendation_desc"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_age"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/your_age"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_desc" />

            <com.c242pS371.nutrigoal.ui.common.TextFieldView
                android:id="@+id/ed_age"
                android:layout_width="0dp"
                android:layout_height="@dimen/edt_height"
                android:layout_marginTop="10dp"
                android:hint="@string/age"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_age" />

            <TextView
                android:id="@+id/tv_error_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edt_error_text_margin_start"
                android:layout_marginTop="@dimen/edt_error_text_margin_top"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/ed_age"
                tools:text="Wrong input" />

            <TextView
                android:id="@+id/tv_history_mag"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/is_there_a_history_of_mag_disease"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_error_age" />

            <RadioGroup
                android:id="@+id/rg_history_mag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_yes"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_history_mag">

                <RadioButton
                    android:id="@+id/rb_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/rb_gap_horizontal"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_diet_category"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rb_gap_vertical"
                android:text="@string/select_diet_category"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/rg_history_mag" />

            <RadioGroup
                android:id="@+id/rg_diet_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_vegan"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_diet_category">

                <RadioButton
                    android:id="@+id/rb_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/rb_gap_horizontal"
                    android:text="@string/vegan" />

                <RadioButton
                    android:id="@+id/rb_keto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keto" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_activity_level"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edt_gap"
                android:text="@string/select_your_activity_level"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/rg_diet_category" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_activity_level"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_activity_level">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/outline_button"
                    android:hint="@null"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_meal_schedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/dropdown_activity_level">

                <TextView
                    android:id="@+id/tv_breakfast"
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/breakfast_time" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_breakfast"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_breakfast_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/outline_button"
                        android:hint="@null"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lunch_time" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_lunch_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/outline_button"
                        android:hint="@null"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/dinner_time" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_dinner_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/outline_button"
                        android:hint="@null"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/tv_favorite_processed_food"
                style="@style/TextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edt_gap"
                android:text="@string/what_is_your_favorite_processed_food"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/ll_meal_schedule" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/search_your_favorite_food"
                android:queryHint="@string/Apple"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_favorite_processed_food" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:paddingBottom="400dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/search_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:elevation="10dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="@dimen/survey_btn_height"
            android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
            android:gravity="center"
            android:text="@string/save"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_btn_save"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_duration="3000">

            <include layout="@layout/shimmer_button" />
        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

